solution/ui/regulations/css/scss/partials/_policy_repository.scss
//-----------------------------
// Policy Repository Page
//-----------------------------

@import "../application_settings";

@mixin common-remove-btn-styles {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: $policy_subject_close_background;
    color: $policy_subject_selected_chip_background;
    border-radius: 4px;

    &:hover,
    &:focus,
    &:active {
        background-color: #c0c1c3;
    }

    i {
        pointer-events: none;
    }
}

#policyRepositoryApp.repository-view,
#policyRepositorySearchApp.repository-search-view {
    margin-bottom: 1rem;
    display: flex;
    flex-direction: column;

    &.ds-l-container {
        padding-top: 1.5rem;
        margin: 0;
        max-width: 100%;
    }

    h2 {
        font-family: "Open Sans", Helvetica, sans-serif;
        margin: 0 0 1rem !important; // !important to override the default h2 margin due to vuetify defaults
    }

    h3 {
        margin: 0;
        line-height: 24px;
    }

    .sidebar__container {
        position: relative;
        display: flex;
        border-right: none;
        border-bottom: 2px solid $border_color;
        padding-left: 0px;
        padding-right: 0px;

        @include screen-md {
            border-right: 2px solid $border_color;
            border-bottom: none;
        }

        .sidebar-toggle__button {
            position: absolute;
            top: 0;
            right: 16px;
            display: none; // TODO: revisit this when we have a better idea of how the sidebar will work on mobile

            @include screen-md {
                display: none;
            }
        }

        .sidebar-filters__container {
            @include custom-max(($eds-width-md - 1) / 1px) {
                &--hidden {
                    display: none;
                }
            }
        }
    }

    .sidebar__filters {
        flex: 1;
        margin-bottom: 1rem;

        @mixin filter-borders {
            border: 2px solid $border_color;
            border-radius: 4px;
        }

        @mixin filter-container-styles {
            @include filter-borders;

            padding: 0.75rem 1rem;
            margin-block-start: 1rem;
            margin-block-end: 1rem;
        }

        .selections__container {
            .selections__list {
                list-style: none;
                display: flex;
                flex-wrap: wrap;
                gap: 4px;
                margin: 0 0 1rem;
                padding-left: 0;

                .selections__li {
                    display: flex;
                    align-items: center;
                    background-color: $policy_subject_selected_chip_background;
                    color: $policy_subject_selected_chip_text;
                    border-radius: 4px;
                    padding: 4px 8px;

                    button {
                        width: 16px;
                        height: 16px;
                        margin-left: 8px;

                        @include common-remove-btn-styles;
                    }
                }
            }
        }

        .doc-type__toggle {
            @include filter-container-styles;

            fieldset {
                margin-top: 0;

                .ds-c-choice:checked + label::before {
                    background-color: $mid_blue;
                    border-color: $mid_blue;
                }

                label {
                    margin: 0;
                    font-size: 18px;
                    line-height: 24px;
                }

                div:not(:last-child) {
                    margin-bottom: 0.75rem;
                }
            }
        }

        .subjects__list-container {
            @include filter-container-styles;

            display: flex;
            flex-direction: column;
            min-height: 200px;

            .subjects__loading {
                display: flex;
                align-items: center;
                justify-content: center;
                flex: 1;
            }

            form {
                display: flex;
                flex-direction: column;
                position: relative;

                label[for="subjectReduce"] {
                    font-size: 14px;
                }

                input#subjectReduce {
                    @include filter-borders;

                    flex: 1;
                    height: 1.5rem;
                    margin: 12px 0;
                    padding: 4px 24px 4px 4px;
                    box-sizing: content-box !important; // thanks, Vuetify

                    &:focus,
                    &:focus-visible,
                    &:focus-within,
                    &:active {
                        outline: none !important;
                        border: 2px solid $secondary_border_color !important;
                    }
                }

                .subjects__filter-reset {
                    @include common-remove-btn-styles;

                    top: 50%;
                    right: -3px;
                    transform: translate(-50%);
                    position: absolute;
                    width: 20px;
                    height: 20px;

                    &--hidden {
                        display: none;
                    }
                }
            }
        }

        .subjects__list {
            height: 300px;
            overflow: scroll;
            padding: 0;
            margin: 0;

            .subjects__li {
                margin-bottom: 0.75rem;

                &:last-child {
                    margin-bottom: 0;
                }

                .sidebar-li__button {
                    text-align: left;
                    color: #000;
                    width: 100%;

                    .match__container {
                        @include font-bold-keep-width;

                        .match {
                            @include font-bold-keep-width-reset;
                        }
                    }

                    &--selected {
                        @include font-bold-keep-width;

                        pointer-events: none;
                    }

                    &:hover,
                    &:focus,
                    &:active {
                        @include font-bold-keep-width;

                        cursor: pointer;
                    }
                }
            }
        }
    }

    .loading__span {
        padding: 0 1rem;
    }

    .subj-toc__container {
        padding-left: 16px;

        h1 {
            font-size: 2.25rem;
            margin-bottom: 0px;
        }

        ul.subj-toc__list {
            padding: 0;

            li.subj-toc__li {
                list-style: none;
                padding: 1rem 0.25rem;
                border-bottom: 1px solid $border_color;

                &:last-child {
                    margin-bottom: 0;
                    border-bottom: none;
                }

                a {
                    text-decoration: none;

                    &:hover,
                    &:focus,
                    &:active {
                        cursor: pointer;
                    }

                    .subj-toc-li__div {
                        display: inline-block;
                        font-size: 1rem;
                        line-height: 1.25rem;

                        &--bold {
                            font-weight: 700;
                        }

                        &.subj-toc-li__abbr {
                            padding-right: 5px;
                            margin-right: 5px;
                            border-right: 1px solid $secondary_text_color;
                        }
                    }
                }

                .subj-toc-li__count {
                    margin-top: 4px;
                    font-size: 0.875rem;
                    line-height: 1.25rem;
                    color: $secondary_text_color;

                    .subj-doc__count {
                        font-weight: 700;
                    }
                }
            }
        }
    }

    .doc__list {
        .search-results-count {
            padding: 0 1rem;
        }

        .doc-list__document {
            padding: 0.75rem 1rem;
            border-bottom: 1px solid $border_color;

            .document__info-block {
                margin-bottom: 0.75rem;
            }

            .document__link {
                text-decoration: none;

                &.external {
                    display: block;
                }

                &--view {
                    font-size: $font-size-sm;
                }

                &--search {
                    font-weight: 400;
                }
            }

            .document__subjects {
                margin-top: 0.75rem;
                display: flex;
                flex-wrap: wrap;
                gap: 4px;

                .subject__chip {
                    @include common-chip-styles;

                    text-decoration: none;
                    font-size: 11px;
                    line-height: 18px;
                    height: unset;
                    padding: 2px 8px;

                    &:hover,
                    &:focus {
                        background-color: #e7f4fa;
                    }
                }
            }
        }
    }
}

#policyRepositorySearchApp.repository-search-view {
    .results__container {
        margin-top: 1rem;
        width: 100%;
        box-sizing: border-box;
    }
}

